# 2024-os-hw2

./: .gitignore  1prod_1cons.c  1prod_Ncons.c  CMakeLists.txt  Makefile  Nprod_Mcons.c  README.md  README_KOR.md  Source.c  char_stat.c  functions.c  functions.h  gitignore  hw2  hw2.c  input  input_file  makefile  mutex.c  prod_cons  prod_cons.c  prod_cons_lec.c  prod_cons_rvd_1.c  prod_cons_test.c  prod_cons_with_shared_queue.c  prod_cons_word_count.c  pthread.c  sample  stat.c  steps.txt  struct.h  test.c
Code/: Makefile  prod_cons_.c  prod_cons_1_1.c  prod_cons_bin.c
SampleCode/: char_stat.c  makefile  pthread.c
TestCode/: prod_cons_2.c  prod_cons_3.c  prod_cons_4.c
code/: Makefile  multi_cons  multi_cons.c  prod_cons  prod_cons.c  word_count_cons  word_count_cons.c
default/: prod_cons.c
execs/: rvd1  rvd1_logged
include/: consumer.h  makefile  producer.h  producers.h  shared_object.h  threads.h  words_array.h
mycode/: n_prod_cons.c  one_prod_cons.c
outputs/: output_rvd1_10prod_100cons.txt  output_rvd1_10prod_10cons.txt  output_rvd1_10prod_1cons.txt  output_rvd1_1prod_10cons.txt  output_rvd1_1prod_1cons.txt
part1/: prod_cons.c
part3/: prod_cons.c  sbuf.c  sbuf.h  stat.c  stat.h
reports/: HW2_손보경(32212190).hwpx
src/: a.out  buffer.c  buffer.h  char_stat.c  consumer.c  consumer.h  consumers.c  main.c  main.cpp  parser.c  prod_cons_with_shared_queue.c  producer.c  producer.h  producers.c  shared_object.c  temp.c  test  test1.c  test2.c  threads.c  words_array.c
test-files/: sample-long-text.txt  sample-text.txt
test_script/: single_buffer.sh  (+5 more)
(+35 files in other folders)
